# lite-github-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Justfile  LICENSE  Procfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
docker/: Dockerfile
docs/adr/: 0001-mono-tool-router.md
docs/project-docs/: PRODUCT_REQUIREMENTS_DOCUMENT.md  PROJECT_PLAN_MILESTONES_EPICS_AND_STORIES.md  TECHNICAL_PLAN_OVERVIEW.md
examples/: README.md
scripts/: context_budget_check.py  ensure_gh.sh
src/lite_github_mcp/: cli.py  server.py
src/lite_github_mcp/schemas/: issue.py  pr.py  repo.py
src/lite_github_mcp/services/: cache.py  gh_cli.py  git_cli.py
src/lite_github_mcp/tools/: router.py
tests/: test_backoff_unit.py  test_context_budget_live.py  test_gh_cli_error_paths.py  test_git_cli.py  test_git_cli_unit.py  test_health.py  test_integration_public_repo.py  test_issue_router.py  test_m4_polish_batch2.py  test_m4_polish_batch3.py  test_m4_polish_batch4.py  test_m4_polish_branch_paging.py  test_m4_polish_default_branch.py  test_m4_polish_error_envelopes.py  test_m4_polish_refs_shape.py  test_pager_unit.py  test_paging.py  test_pr_actions_router.py  test_pr_tools_integration_gh.py  test_pr_tools_router.py  test_pr_tools_unit.py  test_refs_and_search.py  test_repo_resolve.py  test_router_multi_mode.py  test_router_tools.py  test_tree_search_limits.py
