[project]
name = "lite-github-mcp"
version = "0.1.0"
description = "Lightweight GitHub MCP server with minimal context and CLI-first data fetches"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Gerald Sornsen"}]
keywords = ["mcp", "github", "fastmcp", "cli", "context-minimization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

# Runtime dependencies
# Note: uvloop is optional and only used on Linux
dependencies = [
  "fastmcp>=2.0.0",
  "pydantic>=2.7",
  "typer>=0.12",
  # "uvloop>=0.20; platform_system == 'Linux'",
]

[project.scripts]
lite-github-mcp = "lite_github_mcp.server:main"
lite-github-mcp-cli = "lite_github_mcp.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
# Dev dependencies for `uv sync --dev`
dev-dependencies = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-xdist>=3.6",
  "pytest-testmon>=2.1",
  "coverage[toml]>=7.6",
  "pytest-cov>=5.0",
  "pre-commit>=3.7",
  "commitizen>=3.27",
  "types-PyYAML>=6.0.12",
  "types-requests>=2.32.0.20240914",
  "honcho>=1.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version", "src/lite_github_mcp/__init__.py:__version__"]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
pythonpath = ["src"]
markers = [
  "integration: marks tests that hit network or public repos (skipped by default)",
]

[tool.coverage.run]
omit = [
  "src/lite_github_mcp/cli.py",
  "src/lite_github_mcp/server.py",
]

[tool.coverage.report]
omit = [
  "src/lite_github_mcp/cli.py",
  "src/lite_github_mcp/server.py",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "Q", "W"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["lite_github_mcp"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true
pretty = true
plugins = []
